@@ -1,3 +1,7 @@
+2015-06-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added proper handling of MM_opposite_field property in MM relations, resolves #65648
+
 2015-05-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected handling of MM relations, resolves #64775
